Day 3, finalizing prototype of introduction page. Also fixed layout issues and scrolling issues. Integrated positioning the about container.

--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -1,24 +1,27 @@
 .App {
     text-align: center;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 .header {
     display: flex;
-    position: fixed;
+    position: absolute;
     top: 0;
-    min-width: 100vw;
+    width: 100vw;
+    min-width: 50vw;
     justify-content: center;
     align-items: center; 
     background-color: black;
     height: 60px;
+    z-index: 2;
 }
 
 .brand {
     display: inline-flex;
     justify-content: flex-start;
-    position: fixed;
+    position: absolute;
     left: 2%;
     font-family: 'Times New Roman', Times, serif;
     font-size: 10px;
@@ -27,10 +30,11 @@
 
 .menu {
     display: inline-flex;
-    position: fixed;
+    position: absolute;
     justify-content: center;
     text-align: center;
     vertical-align: center;
+    width: fit-content;
     min-width: 50%;  
 }
 
@@ -54,7 +58,8 @@
 
 .socials {
     display: inline-flex;
-    position: fixed;
+    position: absolute;
+    width: fit-content;
     right: 1vw;
 }
 
@@ -70,28 +75,72 @@
 
 .introduction {
     display: flex;
-    position: fixed;
+    position: absolute;
     top: 60px;
     background-color: black;
     width: 100vw;
-    height: 100vh;
+    height: calc(100% - 60px);
     z-index: 1;
+    overflow-x: hidden;
 }
 
 .gallery {
     display: flex;
-    position: fixed;
+    position: absolute;
     justify-content: center;
     align-items: center;
-    width: 70%;
-    transform: translate(25%, 15%);
+    width: 70vw;
+    transform: translate(25%, 10%);
     color: white;
+    z-index: 1;
 }
 
-.gallery img {
+.gallery_img {
     display: inline-flex;
     align-items: center;
-    height: 360px;
+    height: 330px;
     width: 250px;
+    object-fit: cover;
+    max-width: 100%;
 }
 
+.caption {
+    display: flex;
+    position: absolute;
+    width: 600px;
+    left: 30%;
+    top: 380px;
+    justify-content: center;
+    align-items: center;
+    font-size: 10px;
+    color: white;
+    z-index: 1;
+}
+
+.get_in_touch {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 110px;
+    height: 35px;
+    font-size: 8px;
+    top: 150px;
+    background-color: rgb(172, 115, 69);
+    color: white;
+    z-index: 1;
+}
+
+.get_in_touch:hover {
+    cursor: pointer;
+}
+
+.about_page {
+    display: flex;
+    width: 100vw;
+    height: 100%;
+    position: absolute;
+    top: 100vh;
+    background-color: white;
+    z-index: 0;
+}
